--- a/training-client.mdx
+++ b/training-client.mdx
@@ -132,3 +132,5 @@ The user can specify
 or [branch](/docs/branches)
 as parameters to `offline_query` in the same fashion
 as [online query](/docs/query-basics).
+
+### Training Client
