--- a/iceberg-deployment.mdx
+++ b/iceberg-deployment.mdx
@@ -80,4 +80,10 @@ that you provided in the Required Information section above (typically
 be named `offline-store`. This ensures that Chalk can properly write and
 manage your offline store data within your designated storage location.
 
+## Querying against the Iceberg Offline Store
+
+The Iceberg offline store can be accessed using the Chalk SQL Interface. In the dashboard, you can
+navigate to the `SQL Explorer`, and run SQL queries directly against the historical feature value
+tables and the query values tables that Chalk maintains in the offline store. In the SDK,
+you can use the `ChalkGRPCClient.run_sql()` method to execute the same SQL queries programmatically.
 
