Fix missing import

--- a/materialized_aggregations.mdx
+++ b/materialized_aggregations.mdx
@@ -10,6 +10,7 @@ import {
     Attribute,
     AttributeTable,
 } from '@/components/AttributeTable'
+import { TipInfo } from '@/components/Tip'
 
 ---
 
