Fix links to sections in fraud-tutorial tip

--- a/fraud-tutorial.mdx
+++ b/fraud-tutorial.mdx
@@ -75,7 +75,7 @@ resolved from the online store.
 
 <TipInfo>
   We'll talk more about deploying code to Chalk later, but, if you'd like to, you're welcome to
-  skip ahead to get a better sense of [deploying code to Chalk] and [running queries].
+  skip ahead to get a better sense of [deploying code to Chalk](#deploying) and [running queries](#querying).
 </TipInfo>
 
 This should not be surprising.
