Remove all attempted uses of interleaved markdown

--- a/debugging-queries.mdx
+++ b/debugging-queries.mdx
@@ -276,7 +276,7 @@ The online query interface for resolvers returns the following schema:
         The query is invalid. All supplied features need to be rooted in the same top-level entity.
     </Attribute>
     <Attribute field={'VALIDATION_FAILED'} kind={<a href={'#field-error'}>FIELD</a>}>
-        A feature value did not match the expected schema (eg. `incompatible type "int"; expected "str"`)
+        A feature value did not match the expected schema (eg. <code>incompatible type "int"; expected "str"</code>)
     </Attribute>
     <Attribute field={'RESOLVER_FAILED'} kind={<a href={'#field-error'}>FIELD</a>}>
         The resolver for a feature errored.
