--- a/envoy-gateway-installation.mdx
+++ b/envoy-gateway-installation.mdx
@@ -50,7 +50,7 @@ for more information about the gateway.
   </Attribute>
   <Attribute field={"gateway_class_name"} kind={"string"}>
     The name of the gateway class resource to use,
-    for example `chalk-gateway-class`. This should be set up during Envoy quickstart.
+    for example <code>chalk-gateway-class</code>. This should be set up during Envoy quickstart.
   </Attribute>
   <Attribute field={"listeners"} kind={"Listener[]"}>
     A list of listeners that configure which routes the proxy should use. See below section for more info on configuration
@@ -70,7 +70,7 @@ This is the scheme for individual listener objects. For more information about a
     The port to listen to.
   </Attribute>
   <Attribute field={"protocol"} kind={"string"}>
-    The protocol to use (ex. `HTTP` or `HTTPS`)
+    The protocol to use (ex. <code>HTTP</code> or <code>HTTPS</code>)
   </Attribute>
   <Attribute field={"allowed_routes"} kind={"Listener[]"}>
     This configures the list of routes this listener is attached to, and which namespaces they can come from.
