--- a/has-many.mdx
+++ b/has-many.mdx
@@ -158,7 +158,7 @@ relationship from our example, add a `User` to the `Transfer` class:
 
 <PyDiffEditor html={manyToOneDiff} />
 
-<TipInfo>Here, you need to use quotes around `User` to use a forward reference.</TipInfo>
+<TipInfo>Here, you need to use quotes around <code>User</code> to use a forward reference.</TipInfo>
 
 [//]: # (Alternatively, you could define the join condition on the same)
 
@@ -202,7 +202,7 @@ class MovieRole:
 ```
 
 <TipInfo>
-  Here you need to use quotes around `DataFrame[MovieRole]` to use a forward reference.
+  Here you need to use quotes around <code>DataFrame[MovieRole]</code> to use a forward reference.
 </TipInfo>
 
 This joining feature class can be populated by a SQL file resolver:
