--- a/has-one.mdx
+++ b/has-one.mdx
@@ -113,7 +113,7 @@ to the `Profile` class:
 
 <PyDiffEditor html={oneToOneDiff} />
 
-<TipInfo>Here you need to use quotes around `User` to use a forward reference.</TipInfo>
+<TipInfo>Here you need to use quotes around <code>User</code> to use a forward reference.</TipInfo>
 
 ### Optional relationships
 
