--- a/introspection.mdx
+++ b/introspection.mdx
@@ -67,8 +67,8 @@ curl -XGET -H "Authorization: Bearer $(chalk token)" \
 <AttributeTable title={"Path Params"}>
 
 <Attribute field={'deployment_id'} kind={'string'}>
-  The machine-generated ID for your deployment, usually a 25-character string that begins with `c`
-  and looks something like `cl789789aoa002chalkexample`. The deployment can be associated with a
+  The machine-generated ID for your deployment, usually a 25-character string that begins with <code>c</code>
+  and looks something like <code>cl789789aoa002chalkexample</code>. The deployment can be associated with a
   preview or production environment.
 </Attribute>
 
